<resources>
    <string name="app_name">3.3.2.AppResources_Language_Switch</string>
    <string name="buttonOK">O\'Key</string>
    <string name="textView">English Text</string>
    <string name="buttonBlack">Black</string>
    <string name="buttonGreen">Green</string>
    <string name="buttonBlue">Blue</string>
    <string name="buttonDefault">Default</string>
    <string name="colorBlack">Black</string>
    <string name="colorGreen">Green</string>
    <string name="colorBlue">Blue</string>



</resources>
